[gd_scene format=3 uid="uid://uot8y2iuno6i"]

[ext_resource type="PackedScene" uid="uid://b1m7o2nmwtyo0" path="res://Insect/insect.tscn" id="1_aqk2v"]
[ext_resource type="Script" uid="uid://b37xgmrtxqaa" path="res://MajorScenes/world.gd" id="1_pkg7o"]
[ext_resource type="PackedScene" uid="uid://crwv8xp61ohlf" path="res://Streetlight/streetlight.tscn" id="1_tlwt5"]
[ext_resource type="PackedScene" uid="uid://cnptsoy288qqg" path="res://TrailerPark/sketchfab_scene.tscn" id="4_6spol"]
[ext_resource type="PackedScene" uid="uid://box5yls1va82w" path="res://Animal Players/Bat/bat.scn" id="4_aqk2v"]
[ext_resource type="AudioStream" uid="uid://bvqxho1jdf8i6" path="res://Audio/background_nature.wav" id="5_036b0"]
[ext_resource type="Script" path="res://health_bar.gd" id="6_dwbse"]
[ext_resource type="Theme" uid="uid://5c6uvxjitaw5" path="res://new_theme.tres" id="8_gbfbk"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fj7yv"]
sky_top_color = Color(0.13168493, 0.16468734, 0.21088964, 1)
sky_curve = 0.04948168
energy_multiplier = 0.1

[sub_resource type="Sky" id="Sky_tlwt5"]
sky_material = SubResource("ProceduralSkyMaterial_fj7yv")

[sub_resource type="Environment" id="Environment_aqk2v"]
background_mode = 2
background_energy_multiplier = 1.2
sky = SubResource("Sky_tlwt5")
glow_enabled = true
glow_strength = 0.8
glow_bloom = 0.5
fog_enabled = true
fog_light_energy = 0.27
volumetric_fog_enabled = true
volumetric_fog_density = 0.02
volumetric_fog_albedo = Color(0.039215688, 0.050980393, 0.07058824, 1)
volumetric_fog_anisotropy = 0.3

[sub_resource type="BoxShape3D" id="BoxShape3D_tlwt5"]
size = Vector3(122.03179, 0.068359375, 96.795)

[sub_resource type="BoxShape3D" id="BoxShape3D_aqk2v"]
size = Vector3(4.114825, 4.1488037, 15.374062)

[sub_resource type="Animation" id="Animation_gbfbk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/WhatToDoText:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/MarginContainer/Proceder:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pkg7o"]
resource_name = "fade_to_new"
length = 13.666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/WhatToDoText:visible_ratio")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(5, 9.033334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/MarginContainer/Proceder:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 12.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gbfbk"]
_data = {
&"RESET": SubResource("Animation_gbfbk"),
&"fade_to_new": SubResource("Animation_pkg7o")
}

[node name="World" type="Node3D" unique_id=1162110130]
script = ExtResource("1_pkg7o")

[node name="Insect" parent="." unique_id=2126446087 instance=ExtResource("1_aqk2v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.180938, 3.583867, 18.649738)

[node name="Streetlight" parent="." unique_id=2010003233 instance=ExtResource("1_tlwt5")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 7.7353973, -0.48098105, 18.69352)

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=1278814296]
environment = SubResource("Environment_aqk2v")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=430690072]
transform = Transform3D(1, 0, 0, 0, 0.6091629, -0.79304516, 0, 0.79304516, 0.6091629, 15.39088, -0.7291641, 227.99211)
light_color = Color(0.82463723, 0.8915544, 1, 1)
light_energy = 1.35

[node name="Sketchfab_Scene" parent="." unique_id=1887943949 instance=ExtResource("4_6spol")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8210192, 0, 0.7561884)

[node name="Bat" parent="." unique_id=795369276 instance=ExtResource("4_aqk2v")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 1.1353681, 4.1702957, -0.6994445)

[node name="Colliders" type="Node" parent="." unique_id=15073650]

[node name="Floor" type="StaticBody3D" parent="Colliders" unique_id=915264354]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Colliders/Floor" unique_id=1397653159]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4658203, 0)
shape = SubResource("BoxShape3D_tlwt5")

[node name="TrailerHouse" type="StaticBody3D" parent="Colliders" unique_id=1028944010]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Colliders/TrailerHouse" unique_id=1008010054]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8865926, 1.5521336, 3.2949944)
shape = SubResource("BoxShape3D_aqk2v")

[node name="TrailerHouse2" type="StaticBody3D" parent="Colliders" unique_id=1916776374]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.555807, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Colliders/TrailerHouse2" unique_id=23722159]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8865926, 1.5521336, 3.2949944)
shape = SubResource("BoxShape3D_aqk2v")

[node name="TrailerHouse3" type="StaticBody3D" parent="Colliders" unique_id=192448945]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 44.21498, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Colliders/TrailerHouse3" unique_id=1038553233]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8865926, 1.5521336, 3.2949944)
shape = SubResource("BoxShape3D_aqk2v")

[node name="TrailerHouse4" type="StaticBody3D" parent="Colliders" unique_id=80670744]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 44.158707, 0, 38.936466)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Colliders/TrailerHouse4" unique_id=1955444998]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8865926, 1.5521336, 3.2949944)
shape = SubResource("BoxShape3D_aqk2v")

[node name="TrailerHouse5" type="StaticBody3D" parent="Colliders" unique_id=2093972445]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.366804, 0, 38.564095)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Colliders/TrailerHouse5" unique_id=1076350392]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8865926, 1.5521336, 3.2949944)
shape = SubResource("BoxShape3D_aqk2v")

[node name="TrailerHouse5" type="StaticBody3D" parent="Colliders/TrailerHouse5" unique_id=1938848953]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.416655, 0, 0.21074295)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Colliders/TrailerHouse5/TrailerHouse5" unique_id=2075443127]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8865926, 1.5521336, 3.2949944)
shape = SubResource("BoxShape3D_aqk2v")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=817414151]
stream = ExtResource("5_036b0")
volume_db = -10.0
autoplay = true

[node name="Insect2" parent="." unique_id=1608781788 instance=ExtResource("1_aqk2v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.723125, 1.7930536, 23.456465)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1337728480]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer" unique_id=1722025079]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -248.0
offset_top = -152.0
offset_right = 248.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/VBoxContainer" unique_id=171694064]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]Faim"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/VBoxContainer" unique_id=371198616]
layout_mode = 2
theme_override_font_sizes/font_size = 30
script = ExtResource("6_dwbse")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" unique_id=1657117932]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="WhatToDoText" type="RichTextLabel" parent="CanvasLayer" unique_id=2007673999]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_gbfbk")
bbcode_enabled = true
text = "[center]À Trois‑Rivières, la pollution lumineuse perturbe profondément la vie nocturne. Vous en avez déjà vu les effets.

Mais il suffit parfois de gestes très simples pour redonner la nuit aux animaux : réduire l’intensité des lampadaires, orienter les lumières vers le sol, utiliser des ampoules plus chaudes, ou encore éteindre les enseignes et les projecteurs quand ils ne sont plus nécessaires.

Voyons maintenant comment la ville change lorsque ces mesures sont mises en place."
visible_characters = 0
visible_ratio = 0.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer" unique_id=1164272165]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -152.5
offset_top = -96.0
offset_right = 152.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("8_gbfbk")

[node name="Proceder" type="Button" parent="CanvasLayer/MarginContainer" unique_id=1803894226]
visible = false
layout_mode = 2
theme = ExtResource("8_gbfbk")
text = "Proceder"

[node name="Insect3" parent="." unique_id=479024756 instance=ExtResource("1_aqk2v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.9365973, 0.30417776, 18.971123)

[node name="NestMarker" type="Marker3D" parent="." unique_id=1265446385]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.16637, 8.099243, 123.51618)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1876675658]
libraries/ = SubResource("AnimationLibrary_gbfbk")

[node name="Node" type="Node" parent="." unique_id=1147448462]

[node name="OmniLight3D" type="OmniLight3D" parent="Node" unique_id=2013863621]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.0679028, 2.0173182, -1.1510842)
light_color = Color(0.99999994, 0.96348435, 0.92112386, 1)
light_energy = 8.355
light_size = 0.492
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.745
shadow_normal_bias = 6.565
shadow_transmittance_bias = -0.466
shadow_blur = 0.677
omni_range = 5.9300275

[node name="OmniLight3D2" type="OmniLight3D" parent="Node" unique_id=648099918]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8519063, 2.1979656, 8.859683)
light_color = Color(0.99999994, 0.96348435, 0.92112386, 1)
light_energy = 8.355
light_size = 0.492
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.745
shadow_normal_bias = 6.565
shadow_transmittance_bias = -0.466
shadow_blur = 0.677
omni_range = 5.9300275

[node name="OmniLight3D3" type="OmniLight3D" parent="Node" unique_id=832540160]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.037924, 2.0173182, 1.2041633)
light_color = Color(0.99999994, 0.96348435, 0.92112386, 1)
light_energy = 8.355
light_size = 0.492
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.745
shadow_normal_bias = 6.565
shadow_transmittance_bias = -0.466
shadow_blur = 0.677
omni_range = 5.9300275

[node name="OmniLight3D4" type="OmniLight3D" parent="Node" unique_id=1097142495]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.821926, 2.126196, 9.606632)
light_color = Color(0.99999994, 0.96348435, 0.92112386, 1)
light_energy = 8.355
light_size = 0.492
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.745
shadow_normal_bias = 6.565
shadow_transmittance_bias = -0.466
shadow_blur = 0.677
omni_range = 5.9300275

[node name="OmniLight3D5" type="OmniLight3D" parent="Node" unique_id=478888956]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45.4368, 2.0173182, -1.1510842)
light_color = Color(0.99999994, 0.96348435, 0.92112386, 1)
light_energy = 8.355
light_size = 0.492
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.745
shadow_normal_bias = 6.565
shadow_transmittance_bias = -0.466
shadow_blur = 0.677
omni_range = 5.9300275

[node name="OmniLight3D6" type="OmniLight3D" parent="Node" unique_id=2066824611]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45.220802, 2.1979656, 8.859683)
light_color = Color(0.99999994, 0.96348435, 0.92112386, 1)
light_energy = 8.355
light_size = 0.492
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.745
shadow_normal_bias = 6.565
shadow_transmittance_bias = -0.466
shadow_blur = 0.677
omni_range = 5.9300275

[node name="OmniLight3D7" type="OmniLight3D" parent="Node" unique_id=1970888402]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45.4368, 2.0173182, 38.327244)
light_color = Color(0.99999994, 0.96348435, 0.92112386, 1)
light_energy = 8.355
light_size = 0.492
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.745
shadow_normal_bias = 6.565
shadow_transmittance_bias = -0.466
shadow_blur = 0.677
omni_range = 5.9300275

[node name="OmniLight3D8" type="OmniLight3D" parent="Node" unique_id=573642812]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45.220802, 2.1979656, 48.338013)
light_color = Color(0.99999994, 0.96348435, 0.92112386, 1)
light_energy = 8.355
light_size = 0.492
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.745
shadow_normal_bias = 6.565
shadow_transmittance_bias = -0.466
shadow_blur = 0.677
omni_range = 5.9300275

[node name="OmniLight3D9" type="OmniLight3D" parent="Node" unique_id=533969932]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.964512, 2.0173182, 38.327244)
light_color = Color(0.99999994, 0.96348435, 0.92112386, 1)
light_energy = 8.355
light_size = 0.492
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.745
shadow_normal_bias = 6.565
shadow_transmittance_bias = -0.466
shadow_blur = 0.677
omni_range = 5.9300275

[node name="OmniLight3D10" type="OmniLight3D" parent="Node" unique_id=129109773]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.748516, 2.1979656, 48.338013)
light_color = Color(0.99999994, 0.96348435, 0.92112386, 1)
light_energy = 8.355
light_size = 0.492
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.745
shadow_normal_bias = 6.565
shadow_transmittance_bias = -0.466
shadow_blur = 0.677
omni_range = 5.9300275

[node name="OmniLight3D11" type="OmniLight3D" parent="Node" unique_id=1541249614]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.01198101, 2.0173182, 39.860558)
light_color = Color(0.99999994, 0.96348435, 0.92112386, 1)
light_energy = 8.355
light_size = 0.492
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.745
shadow_normal_bias = 6.565
shadow_transmittance_bias = -0.466
shadow_blur = 0.677
omni_range = 5.9300275

[node name="OmniLight3D12" type="OmniLight3D" parent="Node" unique_id=178380881]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.20401478, 2.1979656, 48.695675)
light_color = Color(0.99999994, 0.96348435, 0.92112386, 1)
light_energy = 8.355
light_size = 0.492
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.745
shadow_normal_bias = 6.565
shadow_transmittance_bias = -0.466
shadow_blur = 0.677
omni_range = 5.9300275

[connection signal="starved" from="Bat" to="." method="_on_bat_starved"]
[connection signal="update_hunger" from="Bat" to="CanvasLayer/VBoxContainer/ProgressBar" method="_on_bat_update_hunger"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Proceder" to="." method="_on_proceder_pressed"]
